# jobfit-finder

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py  types.py
backend/app/core/: config.py  gemini_client.py
backend/app/models/: schemas.py
backend/app/services/: job_parser.py  matcher.py  resume_parser.py  scoring.py
backend/app/services/job_sources/: __init__.py  base.py  greenhouse.py  lever.py  router.py  workday.py
backend/tests/: test_scoring.py
backend/tests/fixtures/: sample_resume.txt
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/components/: ResultsList.tsx  UploadForm.tsx
frontend/app/results/: page.tsx
